--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,58 @@ header {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
+.title-modal {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 40px;
+  margin-bottom: 12px;
+}
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--color-text);
+}
+.form-label:not(:first-child) {
+  margin-top: 10px;
+}
+.form-control {
+  position: relative;
+}
+.form-input {
+  width: 100%;
+  padding: 14px 15px 14px 42px;
+  background-color: #ffffff;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+}
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+
+  transform: translateY(-50%);
+  fill: currentcolor;
+}
+.form-textarea {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  width: 416px;
+  height: 96px;
+  resize: none;
+  background-color: #ffffff;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  padding: 12px 16px;
+}
 .main-text-section {
   background-color: #fff;
   padding-bottom: initial;
@@ -411,7 +463,6 @@ header {
 }
 
 footer {
-  /* padding: 60px 0; */
   background-color: var(--color-brand);
 }
 
@@ -501,6 +552,34 @@ footer {
   text-transform: uppercase;
   color: #fff;
   margin-bottom: 20px;
+}
+.form-input-footer {
+  width: 100%;
+  padding: 15px 16px;
+  width: 358px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--color-brand);
+  color: rgba(255, 255, 255, 0.6);
+}
+.button-form-footer {
+  display: inline-flex;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  align-items: center;
+  cursor: pointer;
+  gap: 10px;
+  padding: 10px 28px;
+  margin-left: 12px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  color: #fff;
+  fill: #fff;
 }
 .header-portfolio {
   border: 1px solid #ececec;
