--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ header {
   min-width: 528px;
   min-height: 581px;
   background-color: #fff;
-  padding: 8px;
+  padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -237,9 +237,9 @@ header {
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-top: 40px;
   margin-bottom: 12px;
 }
+
 .form-label {
   display: block;
   margin-bottom: 4px;
@@ -266,7 +266,6 @@ header {
   position: absolute;
   top: 50%;
   left: 15px;
-
   transform: translateY(-50%);
   fill: currentcolor;
 }
@@ -274,15 +273,44 @@ header {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-  width: 416px;
-  height: 96px;
+  width: 100%;
+  height: 120px;
   resize: none;
   background-color: #ffffff;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
   padding: 12px 16px;
+  margin-bottom: 20px;
 }
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.checkbox-label {
+  position: relative;
+  padding-left: 24px;
+}
+.checkbox-label:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--color-primary);
+  border-radius: 2px;
+  content: '';
+}
+
 .main-text-section {
   background-color: #fff;
   padding-bottom: initial;
@@ -489,6 +517,7 @@ footer {
 }
 .contact-links-footer {
   margin-top: 20px;
+  width: 231px;
 }
 .contact-link-footer {
   margin: 9px 0;
@@ -505,6 +534,7 @@ footer {
   align-items: baseline;
   display: flex;
   padding: 60px 0;
+  justify-content: space-between;
 }
 .soc-link-text {
   color: #fff;
@@ -540,10 +570,7 @@ footer {
   background-color: var(--color-focus);
   outline: var(--color-focus);
 }
-.container-form-footer {
-  align-items: baseline;
-  margin-left: 93px;
-}
+
 .text-form-footer {
   font-weight: 700;
   font-size: 14px;
