--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,13 @@ header {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+  border-color: var(--color-focus);
+}
+.form-control:focus-within .form-icon {
+  fill: var(--color-focus);
 }
 .form-icon {
   position: absolute;
@@ -282,33 +289,42 @@ header {
   outline: none;
   padding: 12px 16px;
   margin-bottom: 20px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.visually-hidden {
+.form-textarea:focus {
+  border: 1px solid var(--color-focus);
+}
+.field {
+  display: flex;
+  align-items: center;
+}
+.checkbox {
   position: absolute;
-  white-space: nowrap;
   width: 1px;
   height: 1px;
-  overflow: hidden;
-  border: 0;
+  margin: -1px;
+  bottom: 0;
   padding: 0;
   clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
+  overflow: hidden;
 }
-.checkbox-label {
-  position: relative;
-  padding-left: 24px;
-}
-.checkbox-label:before {
-  position: absolute;
-  top: 0;
-  left: 0;
+.modal-icon {
+  display: inline-block;
   width: 16px;
   height: 15px;
+  margin-right: 5px;
   border: 2px solid var(--color-primary);
   border-radius: 2px;
-  content: '';
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked + .modal-icon {
+  border-color: transparent;
+  background-color: var(--color-focus);
+  background-image: url(../images/icon-check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
 
 .main-text-section {
