--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,7 @@ header {
   left: 15px;
   transform: translateY(-50%);
   fill: currentcolor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-textarea {
   font-size: 12px;
