--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,8 @@ header {
 }
 .form-input {
   width: 100%;
-  padding: 14px 15px 14px 42px;
+  height: 40px;
+  padding-left: 42px;
   background-color: #ffffff;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -333,6 +334,12 @@ header {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-image: url(../images/icon-check.svg);
+}
+.text-modal {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--color-text);
 }
 .button-modal {
   font-weight: 700;
@@ -557,7 +564,6 @@ footer {
 }
 .contact-links-footer {
   margin-top: 20px;
-  width: 231px;
 }
 .contact-link-footer {
   margin: 9px 0;
@@ -568,7 +574,6 @@ footer {
 }
 .container-soc-links-footer {
   align-items: baseline;
-  margin-left: 70px;
 }
 .container-footer-wrapper {
   align-items: baseline;
@@ -659,17 +664,21 @@ footer {
   line-height: 1.62;
   letter-spacing: 0.03em;
   color: var(--color-primary);
-  background: var(--color-backgorund);
+  background-color: var(--color-backgorund);
+
   border-radius: 4px;
   border: none;
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-portfolio:focus,
 .button-portfolio:hover {
   background-color: var(--color-focus);
   color: #fff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .list-buttons-portfolio {
