--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,9 @@ header {
   letter-spacing: 0.03em;
   color: var(--color-text);
 }
+.text-modal-conditions {
+  color: var(--color-focus);
+}
 .button-modal {
   font-weight: 700;
   font-size: 16px;
